# DeepTextReplace

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  settings.toml
include/DeepTextReplace/: EditFiles.hpp  Semaphore.hpp  Settings.hpp
src/: EditFiles.cpp  ParsedFiles.cpp  Settings.cpp  main.cpp
tests/: CMakeLists.txt
tests/perf/: CMakeLists.txt  example.cpp
tests/unit/: CMakeLists.txt  EditFiles_test.cpp  ParsedFiles_test.cpp  Settings_test.cpp  example_test.cpp
tests/unit/fixtures/: settings.toml
